# openAI_sdk

openai_sdk/01helloworld_cl/: pyproject.toml
openai_sdk/01helloworld_cl/src/helloworld_cl/: __init__.py  hello.py
openai_sdk/helloworld_cl/src/helloworld_cl/: hello.py
